Update lyrics and signature in index.html

--- a/FATMA/index.html
+++ b/FATMA/index.html
@@ -271,17 +271,17 @@
         <div class="decoration-bottom-left">🌷💕</div>
         <div class="decoration-bottom-right">💓🌼</div>
 
-        <p>Fatma'm, açıldı mı gözlerin, ey can bahçemin gülü,</p>
-        <p>Yüzün her sabah yeniden doğar, taze bir dal gibi, ey sevgilim.</p>
+        <p>Fatmam, açıldı mı o güzel gözlerin, kalp bahçemin tek gülü,</p>
+        <p>Yüzün her sabah yeniden doğar</p>
         <p>Güzelliğin her gün daha da artıyor, kalbim sana hasret.</p>
         <p>Her sabah seninle uyanıyorum, aşkın her zaman yüreğimde.</p>
-        <p>Melek kalbinle ışıldıyorsun, her dokunuşun bir şefkat.</p>
-        <p>O tatlı yüzünle güneşi bile kıskandırıyorsun, bu ne güzel bir sanat.</p>
-        <p>Günaydın sana, ömrüme neşe veren yarim,</p>
-        <p>Seninle her sabah, bu dünya yeniden yaratılıyor.</p>
+        <p>Melek kalbinle ışıldıyorsun, dokunuşun ise bir şefkat.</p>
+        <p>O tatlı yüzünle güneşi bile kıskandırıyorsun, bu ne tatlı bir sanat.</p>
+        <p>Günaydın, ömrüme neşe veren kadın,</p>
+        <p>Her sabah, içimi aytınlatan tatlı kadın.</p>
         
         <div class="signature">
-            - Senin Canın
+            - Senin Delin
         </div>
 
         <iframe 
