Update signature text in index.html

--- a/YETER/index.html
+++ b/YETER/index.html
@@ -373,7 +373,7 @@
         <p>Ellerimin değdiği yere..</p>
         
         <div class="signature">
-            - Senin Canın
+            Gözlerinin İçinde Kaybolan...
         </div>
 
         <iframe 
