Update lyrics and iframe source in index.html

--- a/nazik/index.html
+++ b/nazik/index.html
@@ -104,7 +104,7 @@
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
 
-        /* YENİ: NAZİK harfleri ve kalp animasyonu */
+        /* NAZİK harfleri ve kalp animasyonu */
         .heart {
             position: fixed;
             top: -10vh;
@@ -147,7 +147,7 @@
         .decoration-bottom-left { bottom: 15px; left: 15px; transform: rotate(15deg); }
         .decoration-bottom-right { bottom: 15px; right: 15px; transform: rotate(-15deg); }
 
-        /* YENİ: İmza */
+        /* İmza */
         .signature {
             font-family: 'Super Malibu', sans-serif;
             font-style: normal; 
@@ -251,7 +251,7 @@
             height: 40px;
             font-size: 1.5em;
             flex-basis: 40px;
-            gap: 3px; /* Daha da sığdırmak için */
+            gap: 3px; 
         }
         
         .letter-box.revealed {
@@ -399,15 +399,23 @@
         <div class="decoration-bottom-left">🌷💕</div>
         <div class="decoration-bottom-right">💓🌼</div>
 
-        <h1>Benim Güzel Sevgilim</h1>
-        <p>Bana ellerini ver</p>
-        <p>Hayat seni sevince güzel</p>
-        <p>Yoluna adadım ömrümü ben</p>
-        <p>Gel kaçma güzel</p>
-        <p>Seninle uçarım, seninle ben</p>
-        <p>Seninle bir bütünüm ben</p>
-        <p>Bana ellerini ver</p>
-        <p>Hayat seni sevince güzel...</p>
+        <h1>Şarkımız...</h1>
+        <p>Beni eller gibi görme</p>
+        <p>Sen benimsin ben seninim</p>
+        <p>Gel seni benden ayırma</p>
+        <p>Gel seni benden ayırma</p>
+        <p>Sen benimsin ben seninim</p>
+        <p>Sen benimsin ben seninim</p>
+        <p>Senin kalbin benim kalbim</p>
+        <p>Sana malumdur her halım</p>
+        <p>Kaçma benden nazlı gülüm</p>
+        <p>Kaçma benden nazlı gülüm</p>
+        <p>Sen benimsin ben seninim</p>
+        <p>Sen benimsin ben seninim</p>
+        <p>Kalpten kalbe bir yol vardır</p>
+        <p>Gözünen görünmez sırdır</p>
+        <p>İkimizin kalbi birdir</p>
+        <p>İkimizin kalbi birdir</p>
         
         <div class="signature">
              Canım Sevgilim
@@ -415,7 +423,7 @@
 
         <iframe 
             id="video-player-iframe" 
-            src="https://www.youtube.com/embed/kGgYgO1d-aI" 
+            src="https://www.youtube.com/embed/nOgEMfMl4jk" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
