--- a/GAMZE/index.html
+++ b/GAMZE/index.html
@@ -147,15 +147,9 @@
         .decoration-bottom-left { bottom: 15px; left: 15px; transform: rotate(15deg); }
         .decoration-bottom-right { bottom: 15px; right: 15px; transform: rotate(-15deg); }
 
-        /* İmza */
+        /* İmza kaldırıldı */
         .signature {
-            font-family: 'Super Malibu', sans-serif;
-            font-style: normal; 
-            font-size: 1.8em; 
-            margin-top: 30px;
-            color: #6a4a8c; 
-            text-align: right;
-            padding-right: 20px;
+           display: none;
         }
 
         /* --- KELİME OYUNU STİLLERİ --- */
@@ -399,30 +393,26 @@
         <div class="decoration-bottom-left">🌷💕</div>
         <div class="decoration-bottom-right">💓🌼</div>
 
-        <h1>Gamze'ye...</h1>
-        <p>Hasret</p>
-        <p>büyük bir şehir gibi üstümde.</p>
-        <p>Gamze.</p>
-        <p>Senin o tatlı yüzün</p>
-        <p>bir bahar güneşi gibi doğuyor aklıma.</p>
-        <p>Sesin,</p>
-        <p>en güzel şarkı kulaklarımda.</p>
-        <p>Umarım çok iyisindir,</p>
-        <p>umut hep oradadır.</p>
-        <p>Ama bil ki,</p>
-        <p>en çok istediğim şey</p>
-        <p>şu an</p>
-        <p>başımı o minicik, o şirin göğsüne yaslamak</p>
-        <p>ve dünyayı unutmak.</p>
-        <p>Seni özlemek böyle...</p>
+        <h1>Sana bir şarkı...</h1>
+        <p>Kimseyi görmedim ben</p>
+        <p>Senden daha güzel</p>
+        <p>Kimseyi tanımadım ben</p>
+        <p>Senden daha özel</p>
+        <p>Kimselere de bakmadım</p>
+        <p>Aklımdan geçen</p>
+        <p>Kimseyi tanımadım ben</p>
+        <p>Senden daha güzel</p>
+        <p>Senden daha güzel</p>
+        <p>Senden daha güzel</p>
+        <p>Senden daha güzel</p>
+        <p>Sana nerden rastladım?</p>
+        <p>Oldum derbeder</p>
+        <p>Kendimi sana sakladım</p>
+        <p>Senden daha güzel.</p>
         
-        <div class="signature">
-             Canım Sevgilim
-        </div>
-
         <iframe 
             id="video-player-iframe" 
-            src="https://www.youtube.com/embed/nOgEMfMl4jk" 
+            src="https://www.youtube.com/embed/3bfkyXtuIXk" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
