--- a/YETER/kelime.html
+++ b/YETER/kelime.html
@@ -251,6 +251,8 @@
             height: 40px;
             font-size: 1.5em;
             flex-basis: 40px;
+            /* Gerekirse harf aralığını (gap) azaltabilirsiniz */
+            /* gap: 3px; */
         }
         
         .letter-box.revealed {
@@ -398,21 +400,73 @@
         <div class="decoration-bottom-left">🌷💕</div>
         <div class="decoration-bottom-right">💓🌼</div>
 
-        <p>Kimseyi görmedim ben</p>
-        <p>Senden daha güzel</p>
-        <p>Kimseyi tanımadım ben</p>
-        <p>Senden daha özel</p>
-        <p>Kimselere de bakmadım</p>
-        <p>Aklımdan geçen</p>
-        <p>Kimseyi tanımadım ben</p>
-        <p>Senden daha güzel</p>
-        <p>Senden daha güzel</p>
-        <p>Senden daha güzel</p>
-        <p>Senden daha güzel</p>
-        <p>Sana nerden rastladım?</p>
-        <p>Oldum derbeder</p>
-        <p>Kendimi sana sakladım</p>
-        <p>Senden daha güzel.</p>
+        <h1>Şarkımız...</h1>
+        <p>Were bo min bikene</p>
+        <p>(Gel benim için gül)</p>
+        <p>Keniya te çend şêrîne</p>
+        <p>(Gülüşün ne kadar tatlı)</p>
+        <p>Xoşiyêt min yê tene</p>
+        <p>(Tek mutluluğum sensin)</p>
+        <p>Jiyan gel te evîne</p>
+        <p>(Hayat seninle aşktır)</p>
+        <p>Xoşiyet vî serdemî</p>
+        <p>(Bu zamanın mutlulukları)</p>
+        <p>Nabine ew xoşiyê</p>
+        <p>(O mutluluk gibi olmuyor)</p>
+        <p>Dema bo min dikenî</p>
+        <p>(Sen bana güldüğünde)</p>
+        <p>Her gavekê bi êş im</p>
+        <p>(Her an acı içindeyim)</p>
+        <p>Behna te hil dikêşim</p>
+        <p>(Kokunu içime çekiyorum)</p>
+        <p>Çi êş û çi xem û jan</p>
+        <p>(Ne acı, ne gam, ne sızı varsa)</p>
+        <p>Ji dilî da havêjim</p>
+        <p>(Yüreğimden atıyorum)</p>
+        <p>Deşta dilî te kola</p>
+        <p>(Gönül ovamı kazıdın)</p>
+        <p>Te kire baxçê gula</p>
+        <p>(Onu gül bahçesi yaptın)</p>
+        <p>Di navda tu runîştî</p>
+        <p>(İçine sen oturdun)</p>
+        <p>Dîrketim ez ji kula</p>
+        <p>(Dertlerden uzaklaştım)</p>
+        <p>Sebra min î hedarî</p>
+        <p>(Sabrım ve direncimsin)</p>
+        <p>Ronahîya şeva tarî</p>
+        <p>(Karanlık gecemin aydınlığısın)</p>
+        <p>Bo min gul û gulavî</p>
+        <p>(Benim için gül ve gülsuyusun)</p>
+        <p>Ser serê min dibarî</p>
+        <p>(Başımın üstüne yağıyorsun)</p>
+        <p>Eger min çend dil heban</p>
+        <p>(Eğer birkaç kalbim olsaydı)</p>
+        <p>Da hemiya kime qûrban</p>
+        <p>(Hepsini kurban ederdim)</p>
+        <p>Şev û roj dem û gava</p>
+        <p>(Gece gündüz, her an)</p>
+        <p>Bidîv rêka teve ban</p>
+        <p>(Senin yolunda olurdum)</p>
+        <p>Spêdê çavê xwo vedikim</p>
+        <p>(Sabah gözümü açıyorum)</p>
+        <p>Êkem kes hizra te dikim</p>
+        <p>(İlk seni düşünüyorum)</p>
+        <p>Roja min derbas dibît</p>
+        <p>(Günüm geçiyor)</p>
+        <p>Bi tinê gazî te dikim</p>
+        <p>(Sadece sana sesleniyorum)</p>
+        <p>Li hişkatiya dilî</p>
+        <p>(Gönlümün kuraklığında)</p>
+        <p>Tu buhar û baranî</p>
+        <p>(Sen bahar ve yağmursun)</p>
+        <p>Vîna min bo te şête</p>
+        <p>(Sana olan tutkum delicedir)</p>
+        <p>Kes nagirît cîhê te</p>
+        <p>(Kimse yerini tutamaz)</p>
+        <p>Roja ez te nebînim</p>
+        <p>(Seni görmediğim gün)</p>
+        <p>Dilê min agir û pête</p>
+        <p>(Kalbim ateş ve alevdir)</p>
         
         <div class="signature">
              Yeterkolik
@@ -422,7 +476,7 @@
             id="video-player-iframe"
             width="560" 
             height="315" 
-            src="https://www.youtube.com/embed/_dEjmFWIDS4?si=ABvu8UgN7ATOicn3&amp;start=2208" 
+            src="https://www.youtube.com/embed/GnFisURvpvA" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -433,7 +487,7 @@
 
 
     <script>
-        // --- GÜNCELLENMİŞ SORU LİSTESİ ---
+        // --- GÜNCELLENMİŞ SORU LİSTESİ (HÜLASA, vb.) ---
         const questions = [
             { word: "HÜLASA", hint: "Sadede gel dendiğinde verilen cevaptır." },
             { word: "İZAHÂT", hint: "Yetinmeyen birine yapılan ekstra açıklamalardır." },
@@ -443,7 +497,7 @@
             { word: "BEHEMEHAL", hint: "Belki veya sonra kabul etmez; hemen şimdinin en acil halidir." },
             { word: "VELİNİMET", hint: "Bir esnaf için, para harcayan müşteriden farksızdır." },
             { word: "BİNAENALEYH", hint: "(Sizin de onayladığınız gibi) Asıl işi bir önceki cümleyi sonuca bağlamaktır." },
-            { word: "FİLHAKİKA", hint: "(Sizin de sevdiğiniz gibi) İşin özü, yalancıktan olmayandır." }
+            { word:V: "FİLHAKİKA", hint: "(Sizin de sevdiğiniz gibi) İşin özü, yalancıktan olmayandır." }
         ];
 
         // --- Oyun Değişkenleri ---
